--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -57,11 +57,11 @@
       {% endblock %}
     </main>    
 
-    <footer class="fixed bottom-0 left-0 right-0 bg-gray-800 text-white py-4">
+    <!-- <footer class="fixed bottom-0 left-0 right-0 bg-gray-800 text-white py-4">
 		<div class="container mx-auto flex flex-col md:flex-row items-center justify-end px-4">
 			<p class="text-sm">&copy; 2025 QR Code Ecological Fee. All rights reserved.</p>
 		</div>
-	</footer>
+	</footer> -->
 	
 	
 
